--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,83 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Base styles for the dark mode */
+.dark {
+    background-color: #333;
+    color: #f5f5f5;
+}
+
+.dark .bg-gray-300 {
+    background-color: rgb(43, 42, 43); 
+    color: #f5f5f5;
+}
+
+/* Elements to not change in dark mode */
+.dark .toggle-label {
+    background-color: transparent;
+    color: #f5f5f5;
+}
+.dark .custom-date-input {
+    color: black;
+}
+
+/* Base styles for the toggle switch */
+.toggle-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.round {
+    border-radius: 34px;
+}
+
+.toggle-label {
+    font-size: 16px;
+}
