--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,8 +18,11 @@
     background-color: transparent;
     color: #f5f5f5;
 }
-.dark .custom-date-input {
-    color: black;
+.placeholder {
+    color: rgb(119, 119, 119);
+}
+.dark .placeholder {
+    color: rgb(119, 119, 119);
 }
 
 /* Base styles for the toggle switch */
